fixing silly vim thing

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 <h1 class="title">October talk</h1>
 <h4 class="author"><em>neeraj</em></h4>
 </div>
-        <h4><a href="htth4://neerajt.github.io/October-talk/houston_bars_h4lt.html">Houston bars demo</a></h4>
-				        <h4><a href="htth4://neerajt.github.io/October-talk/cars_demo.html">Cars demo</a></h4>
+        <h4><a href="http://neerajt.github.io/October-talk/houston_bars_plt.html">Houston bars demo</a></h4>
+				        <h4><a href="http://neerajt.github.io/October-talk/cars_demo.html">Cars demo</a></h4>
 </div>
 </body>
 </html>
